<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bannerRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutOne"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="2dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:padding="2dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginStart="3dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/image_description"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/truck_s_current_location"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/lajpat_nagar_new_delhi"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/static_cardview"
                    android:textSize="12sp"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_Layout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            app:tabTextAppearance="@style/TextAppearance.AppCompat"
            android:background="@android:color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/top_selling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/recent_selling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/deal_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offers"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/cat_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_s_new"/>
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</RelativeLayout>