<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:id="@+id/layoutTwo"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/topImage"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:contentDescription="@string/image_description"
                android:layout_marginStart="3dp"
                android:layout_centerVertical="true"
                android:background="@color/colorAccent"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/topImage">

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/top_selling"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/productName"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/type"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/type"
                    android:layout_marginStart="20dp"
                    android:text="@string/premier"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/productName"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/types"
                    android:text="@string/storage_life"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/storage"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/types"
                    android:text="@string/_3_days"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/productName"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/storage"
                    android:text="@string/qty"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/qty"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/storage"
                    android:text="@string/_3_units"
                    android:textSize="13sp"/>

                <!--                <Spinner-->
                <!--                    android:id="@+id/units_spinner"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_below="@+id/qty"-->
                <!--                    android:layout_marginStart="20dp"-->
                <!--                    android:layout_toEndOf="@+id/storage"/>-->


                <TextView
                    android:id="@+id/rs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/types"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/rs_118_00"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rs"
                    android:layout_marginStart="20dp"
                    android:text="@string/rs_90_40"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="13sp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="90dp"
                    android:layout_height="27dp"
                    android:layout_alignBottom="@+id/price"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="13dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/holo_orange_dark">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:id="@+id/removeBtn"
                            android:contentDescription="@string/image_description"
                            android:visibility="invisible"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_remove_circle_black_24dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:id="@+id/result"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/add"
                            android:textColor="@android:color/white"/>

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:id="@+id/addBtn"
                            android:contentDescription="@string/image_description"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_add_circle_black_24dp"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>