<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="3dp">

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/topImage"
                android:layout_width="match_parent"
                android:contentDescription="@string/image_description"

                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/banner_id"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/bannerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/productName"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/banner_name"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>